Fix performance echo server performance